--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,7 @@ body {
   flex-direction: column;
   align-items: center;
   margin-top: 10px;
+  padding-bottom: 70px;
   color: #fff;
 }
 
